<resources>
    <string name="app_name">Mis electros</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="create_account">Crear cuenta</string>
    <string name="forgot_password">Restablecer contraseña</string>
    <string name="full_name">Nombre completo</string>
    <string name="confirm_password">Repetir contraseña</string>
    <string name="register">Registrar</string>
    <string name="error_full_name">Ingrese su nombre completo</string>
    <string name="error_email_required">Ingrese un email</string>
    <string name="error_invalid_email">Ingrese un email válido</string>
    <string name="error_password_required">Ingrese una contraseña</string>
    <string name="error_invalid_password">La contraseña debe tener al menos 8 caracteres, incluir mayúsculas, minúsculas y números</string>
    <string name="error_confirm_password_required">Repita la contraseña</string>
    <string name="error_passwords_not_match">Las contraseñas no coinciden</string>
    <string name="verification_code">Código de verificación</string>
    <string name="validate_code">Validar código</string>
    <string name="error_invalid_code">Ingrese un código de 6 dígitos</string>
    <string name="nav_modify_data">Modificar mis datos</string>
    <string name="nav_my_plan">Mi plan</string>
    <string name="nav_settings">Configuración</string>
    <string name="nav_logout">Salir</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="nav_my_documents">Mis documentos</string>
    <string name="title_documents">Mis documentos</string>
    <string name="step1">Paso 1</string>
    <string name="step2">Paso 2</string>
    <string name="next">Siguiente</string>
    <string name="camera_action">Tomar foto</string>
    <string name="choose_file_action">Seleccionar archivo</string>
    <string name="save">Guardar</string>
    <string name="delete_confirmation">¿Desea eliminar este documento?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="document_name">Nombre</string>
    <string name="document_type">Tipo</string>
    <string name="document_date">Fecha</string>
    <string name="document_store">Nombre de la tienda</string>
    <string name="document_description">Descripción</string>
    <string name="required">Requerido</string>
</resources>
